@@ -48,6 +48,9 @@ from cvs2svn_lib.symbol import Tag
 class SVNCommit:
   """This represents one commit to the Subversion Repository."""
 
+  # textwrap.TextWrapper instance to be used for wrapping log messages:
+  text_wrapper = textwrap.TextWrapper(width=76)
+
   def __init__(self, date, revnum):
     """Instantiate an SVNCommit.
 
@@ -142,7 +145,9 @@ class SVNInitialProjectCommit(SVNCommit):
     return Ctx().username
 
   def get_log_msg(self):
-    return 'Standard project directories initialized by cvs2svn.'
+    return self.text_wrapper.fill(
+        Ctx().initial_project_commit_message % {}
+        )
 
   def get_description(self):
     return 'Project initialization'
@@ -277,11 +282,9 @@ class SVNPostCommit(SVNRevisionCommit):
   def get_log_msg(self):
     """Return a manufactured log message for this commit."""
 
-    return (
-        'This commit was generated by cvs2svn to compensate for '
-        'changes in r%d,\n'
-        'which included commits to RCS files with non-trunk default '
-        'branches.\n') % self.motivating_revnum
+    return self.text_wrapper.fill(
+        Ctx().post_commit_message % {'revnum' : self.motivating_revnum}
+        )
 
   def get_description(self):
     return 'post-commit default branch(es)'
@@ -291,8 +294,6 @@ class SVNPostCommit(SVNRevisionCommit):
 
 
 class SVNSymbolCommit(SVNCommit):
-  text_wrapper = textwrap.TextWrapper(width=76)
-
   def __init__(self, symbol, cvs_symbol_ids, date, revnum):
     SVNCommit.__init__(self, date, revnum)
 
@@ -331,8 +332,10 @@ class SVNSymbolCommit(SVNCommit):
     """Return a manufactured log message for this commit."""
 
     return self.text_wrapper.fill(
-        "This commit was manufactured by cvs2svn to create %s '%s'."
-        % (self._get_symbol_type(), self.symbol.name)
+        Ctx().symbol_commit_message % {
+            'symbol_type' : self._get_symbol_type(),
+            'symbol_name' : self.symbol.name,
+            }
         )
 
   def get_description(self):
